fixed a wrapping problem when viewing sequence

--- a/client/apollo/css/get_sequence.css
+++ b/client/apollo/css/get_sequence.css
@@ -16,7 +16,7 @@
 	width: 100%;
 	height: 20em;
 	font-family: 'courier', monospace;;
-	font-size: 1.5em;
+	font-size: 1.4em;
 }
 
 .first_button_div {
